policies/unauthorized-process-execution.yaml
apiVersion: config.stackrox.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: unauthorized-process-execution
spec:
  categories:
  - Anomalous Activity
  criteriaLocked: true
  description: This policy generates a violation for any process execution that is
    not explicitly allowed by a locked process baseline for a given container specification
    within a Kubernetes deployment.
  enforcementActions: []
  eventSource: DEPLOYMENT_EVENT
  exclusions: []
  isDefault: false
  lifecycleStages:
  - RUNTIME
  mitreAttackVectors: []
  mitreVectorsLocked: true
  policyName: GitOps - Unauthorized Process Execution
  policySections:
  - sectionName: ''
    policyGroups:
    - fieldName: Unexpected Process Executed
      booleanOperator: OR
      negate: false
      values:
      - value: 'true'
  rationale: A locked process baseline communicates high confidence that execution
    of a process not included in the baseline positively indicates malicious activity.
  remediation: Evaluate this process execution for malicious intent, examine other
    accessible resources for abnormal activity, then kill the pod in which this process
    executed.
  scope: []
  severity: HIGH_SEVERITY
  disabled: false
